--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
   <div id="top-banner">
     <img id="banner-image" src="assets/logo_white.jpg"/>
-    <p id="banner-title">GIRLSPLANET999 RANKER</p>
-    <p id="banner-subtitle">Make your own top 9!</p>
+    <p id="banner-title">Boys Planet</p>
+    <p id="banner-subtitle">Initial Top 9!</p>
   </div>
   <div class="flex-container padded-box">
     <div>
